--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
     <!-- menu -->
     <section class="navigace">
 
-        <ul class="menu nahore">
+        <ul class="menu">
             <li><a class="superapka" href="#">Super Appka</a></li>
             <li><a href="#">Úžasný design</a></li>
-
-        </ul>
-
-        <ul class="menu dole">
             <li><a href="#">Boží funkce</a></li>
             <li><a href="#">Zdarma ke stažení</a></li>
 
