--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
     <!-- menu -->
-    <section class="navigace">
+    <nav class="navigace">
 
         <ul class="menu">
             <li><a class="superapka" href="#">Super Appka</a></li>
@@ -23,13 +23,13 @@
 
         </ul>
 
-    </section>
+    </nav>
 
 
 
     <!-- hlavicka -->
 
-    <section class="hlavicka">
+    <header class="hlavicka">
         <div class="text">
             <h1 class="hlavni">Super Appka</h1>
 
@@ -45,7 +45,7 @@
             <img src="images/telefon.png" alt="telefon">
         </div>
 
-    </section>
+    </header>
 
 
 
@@ -58,7 +58,7 @@
             <h2>Cestuj po světě</h2>
 
             <svg class="logo letadlo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70">
-                <circle fill="#48418e" cx="35" cy="35" r="35" />
+                <circle fill="#25133d" cx="35" cy="35" r="35" />
                 <path fill="#fff" d="M44.7,39.9l-6.9-6.9l16.7-12.5l-4.9-4.9l-20.8,8.3l-6.6-6.6c-1.9-1.9-4.5-2.3-5.9-1c-1.3,1.3-0.9,4,1,5.9 l6.6,6.6l-8.3,20.8l4.9,4.9l12.5-16.7l6.9,6.9v9.7h4.9l2.4-7.3l7.3-2.4v-4.9L44.7,39.9L44.7,39.9z" />
             </svg>
 
@@ -71,7 +71,7 @@
             <h2>Chatuj s přáteli</h2>
 
             <svg class="logo bubliny" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70">
-                <circle fill="#48418e" cx="35" cy="35" r="35" />
+                <circle fill="#25133d" cx="35" cy="35" r="35" />
                 <path fill="#fff" d="M52.3,48.1c0,1.5,0.9,2.9,2.2,3.5v0.5c-0.4,0-0.7,0.1-1.1,0.1c-2.3,0-4.4-1-5.8-2.5 c-0.9,0.2-1.8,0.4-2.8,0.4c-5.4,0-9.7-3.9-9.7-8.6s4.4-8.6,9.7-8.6s9.7,3.9,9.7,8.6c0,1.9-0.7,3.6-1.8,5 C52.4,47,52.3,47.6,52.3,48.1L52.3,48.1z M32.8,17.7c9.4,0,17,6.1,17.3,13.7c-1.7-0.7-3.5-1.1-5.4-1.1c-3.2,0-6.3,1.1-8.6,3.2 c-2.4,2.1-3.7,5-3.7,8c0,1.5,0.3,3,0.9,4.3c-0.2,0-0.4,0-0.5,0c-0.9,0-1.8-0.1-2.7-0.2c-3.7,3.7-8.1,4.4-12.4,4.5v-0.9
                 C20,48.1,22,46,22,43.7c0-0.3,0-0.7-0.1-1c-3.9-2.6-6.4-6.5-6.4-10.9C15.6,24,23.3,17.7,32.8,17.7z" />
             </svg>
@@ -86,7 +86,7 @@
             <h2>Zažij dobrodružství</h2>
 
             <svg class="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 70 70">
-                <circle fill="#48418e" cx="35" cy="35" r="35" />
+                <circle fill="#25133d" cx="35" cy="35" r="35" />
                 <path fill="#fff" d="M15.6,22.4l12.1-4.9v29.2l-12.1,4.9V22.4z" />
                 <path fill="#fff" d="M30.2,16.3l12.1,7.3v27.9l-12.1-6.1C30.2,45.5,30.2,16.3,30.2,16.3z" />
                 <path fill="#fff" d="M44.7,23.6l9.7-7.3v29.2l-9.7,7.3V23.6z" />
@@ -102,11 +102,11 @@
 
     <!-- paticka -->
 
-    <section class="paticka">
+    <footer class="paticka">
 
         <p>(c) 2016, Web od A do Z</p>
 
-    </section>
+    </footer>
 
 
 </body>
